<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff3e0"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/steps_ingredients_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/steps_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            tools:text="INGREDIENTS"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
